--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,12 @@
     <groupId>com.shmozo.slither</groupId>
     <artifactId>SlitherIO</artifactId>
     <version>1.0</version>
-
+    <repositories>
+        <repository>
+            <id>spigot-repo</id>
+            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+        </repository>
+    </repositories>
     <dependencies>
         <dependency>
             <groupId>org.spigotmc</groupId>
